# pivot

./: .gitignore  AGENTS.md  API_FIX_SUMMARY.md  CLAUDE.md  FULL_TEXT_ENHANCEMENT.md  QUICK-REFERENCE.md  README.md  TOOL-REFERENCE-GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py  cache.py  config.py  logging_config.py  logging_utils.py  mcp_client.py  mcp_types.py  server.py  settings_base.py  types.py
app/analysis/: __init__.py  citation_network.py  mermaid_generator.py  quote_matcher.py  treatment_classifier.py
app/tools/: cache_tools.py  network.py  research.py  search.py  treatment.py  verification.py
legal-research-assistant-mcp/: .coverage  .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml  test_api_response.py  test_case_lookup.py  test_full_text.py  test_manual.py  test_quote_verification.py  test_roe_text.py  test_visualization.py
legal-research-assistant-mcp/.github/workflows/: ci.yml
legal-research-assistant-mcp/app/: __init__.py  config.py  logging_config.py  logging_utils.py  management.py  mcp_client.py  server.py  settings_base.py  types.py
legal-research-assistant-mcp/app/analysis/: citation_network.py  mermaid_generator.py  quote_matcher.py  treatment_classifier.py
legal-research-assistant-mcp/app/analysis/search/: vector_store.py
legal-research-assistant-mcp/app/tools/: __init__.py  cache_tools.py  network.py  research.py  search.py  treatment.py  verification.py
legal-research-assistant-mcp/tests/: conftest.py  test_api_response.py  test_async_behavior.py  test_cache.py  test_case_lookup.py  test_citation_network.py  test_full_text.py  test_management_commands.py  test_manual_scenarios.py  test_mcp_client.py  test_mcp_client_advanced.py  test_mcp_client_resilience.py  test_mermaid_generator.py  test_network_tools.py  test_quote_matcher.py  test_quote_verification.py  test_search_tool.py  test_server.py  test_treatment.py  test_treatment_classifier.py  test_vector_store.py  test_verification_tools.py  test_visualization.py
legal-research-assistant-mcp/tests/integration/: test_caching.py  test_research_workflows.py
tests/: conftest.py  test_roe_text.py  test_server.py  test_vector_store.py
tests/fixtures/: README.md  courtlistener_case.json  courtlistener_citing_cases_response.json  courtlistener_opinion_response.json  courtlistener_search_response.json  roe_metadata.json  roe_opinion_excerpt.txt  roe_v_wade_text.txt
tests/integration/: __init__.py  test_caching.py  test_manual_scenarios.py  test_mcp_client_advanced.py
tests/unit/: test_async_behavior.py  test_cache.py  test_config.py  test_logging.py  test_management_commands.py  test_mcp_client.py  test_mcp_client_resilience.py  test_quote_matcher.py  test_quote_verification.py  test_research.py  test_search_tool.py  (+5 more)
(+3 files in other folders)
